<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu_ac"
    android:background="@color/white">

    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/main_background"/>






    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:onClick="OnStart_Click"
            android:background="@color/theme_color"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/help"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:onClick="OnHelp_Click"
            android:background="@color/theme_color"
            android:layout_marginTop="14dp"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:onClick="OnSettings_Click"
            android:background="@color/theme_color"
            android:layout_marginTop="14dp"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:onClick="OnExit_Click"
            android:background="@color/theme_color"
            android:layout_marginTop="14dp"/>

    </LinearLayout>








</RelativeLayout>